--- a/public/search.html
+++ b/public/search.html
@@ -1,9 +1,9 @@
-<!DOCTYPE html>
+k<!DOCTYPE html>
 <html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Buscar en transcripciones</title>
+    <title>Enkire Lab: Transcript Search</title>
     <link href="https://cdn.muicss.com/mui-0.9.41/css/mui.min.css" rel="stylesheet" type="text/css" />
     <style>
         body {
