--- a/public/search.html
+++ b/public/search.html
@@ -43,7 +43,7 @@ k<!DOCTYPE html>
     </style>
 </head>
 <body>
-    <h1>Buscar en transcripciones</h1>
+    <h1>Enkire Lab: Transcript Search</h1>
     <div class="search-container">
         <input id="searchTerm" type="text" placeholder="Escribe un término para buscar" class="mui-textfield" style="width: 100%; padding: 10px; font-size: 16px;">
         <button onclick="search()" class="mui-btn mui-btn--primary" style="width: 100%; margin-top: 10px;">BUSCAR</button>
